--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <meta http-equiv="Cache-Control" content="public, max-age=0, no-cache" />
-        <meta name="viewport" content="user-scalable=no"/>
         <title i18n="main-title">maxeven</title>
+        <meta name="description" 
+            content="Auxiliary tool for a class on Timothy Johnson's 'Foundations of Diatonic Theory' (2008), chapter 1."
+        />
+        <meta name="viewport" content="user-scalable=no" />
         <link rel="manifest" href="manifest.json" />
         <link rel="stylesheet" href="src/css/main.css">
         <script type="module" src="src/js/main.js"></script>
