Preload checked.svg

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="user-scalable=no" />
         <link rel="manifest" href="manifest.json" />
         <link rel="stylesheet" href="src/css/main.css">
+        <link rel="preload" href="assets/checked.svg" as="fetch" type="image/svg+xml" crossorigin="anonymous">
         <script type="module" src="src/js/main.js"></script>
         <script src="dep/ctxmenu.min.js"></script>
     </head>
