--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
             content="Auxiliary tool for a class on Timothy Johnson's 'Foundations of Diatonic Theory' (2008), chapter 1."
         />
         <meta name="viewport" content="user-scalable=no" />
-        <link rel="manifest" href="manifest.json" />
         <link rel="stylesheet" href="src/css/main.css">
-        <link rel="preload" href="assets/checked.svg" as="fetch" type="image/svg+xml" crossorigin="anonymous">
+        <link rel="preload" href="assets/checked.svg" as="image" type="image/svg+xml">
         <script type="module" src="src/js/main.js"></script>
         <script src="dep/ctxmenu.min.js"></script>
     </head>
