--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         />
         <meta name="viewport" content="user-scalable=no" />
         <link rel="stylesheet" href="src/css/main.css">
-        <link rel="preload" href="assets/checked.svg" as="image" type="image/svg+xml">
+        <link rel="prefetch" href="assets/checked.svg" as="image" type="image/svg+xml">
         <script type="module" src="src/js/main.js"></script>
         <script src="dep/ctxmenu.min.js"></script>
     </head>
